[project]
name = "aztec-azip-5-simulation"
version = "0.1.0"
description = "Simulation of AZIP-5 parameters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "jupyterlab",
    "matplotlib>=3.10.8",
    "nbclient",
    "nbformat",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly",
]
